// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themes/Utilties/generateColors applies color overrides 1`] = `
{
  "backgroundCritical": {
    "hex": "#dc2626",
    "hexDark": "#c02929",
  },
  "backgroundCriticalFaded": {
    "hex": "#fceeee",
    "hexDark": "#3e1f1f",
  },
  "backgroundCriticalHighlighted": {
    "hex": "#ca2222",
    "hexDark": "#d22e2e",
  },
  "backgroundDisabled": {
    "hex": "#eceef2",
    "hexDark": "#1e212a",
  },
  "backgroundDisabledFaded": {
    "hex": "#f5f6f9",
    "hexDark": "#171921",
  },
  "backgroundElevationBase": {
    "hex": "#ffffff",
    "hexDark": "#15171e",
  },
  "backgroundElevationOverlay": {
    "hex": "#ffffff",
    "hexDark": "#1c1f28",
  },
  "backgroundElevationRaised": {
    "hex": "#ffffff",
    "hexDark": "#191b23",
  },
  "backgroundNeutral": {
    "hex": "#dfe2ea",
    "hexDark": "#494f60",
  },
  "backgroundNeutralFaded": {
    "hex": "#f1f2f6",
    "hexDark": "#222835",
  },
  "backgroundNeutralHighlighted": {
    "hex": "#d2d7e2",
    "hexDark": "#52586b",
  },
  "backgroundPage": {
    "hex": "#ffffff",
    "hexDark": "#0f1116",
  },
  "backgroundPageFaded": {
    "hex": "#f9f9fb",
    "hexDark": "#111319",
  },
  "backgroundPositive": {
    "hex": "#16a34a",
    "hexDark": "#1a8d44",
  },
  "backgroundPositiveFaded": {
    "hex": "#edfdf3",
    "hexDark": "#1f2b21",
  },
  "backgroundPositiveHighlighted": {
    "hex": "#149744",
    "hexDark": "#1d994a",
  },
  "backgroundPrimary": {
    "hex": "#2563eb",
    "hexDark": "#1e5bdf",
  },
  "backgroundPrimaryFaded": {
    "hex": "#ecf1fd",
    "hexDark": "#23273b",
  },
  "backgroundPrimaryHighlighted": {
    "hex": "#215ad7",
    "hexDark": "#2264f3",
  },
  "backgroundWarning": {
    "hex": "#facc15",
    "hexDark": "#f1c512",
  },
  "backgroundWarningFaded": {
    "hex": "#fffae9",
    "hexDark": "#2c271f",
  },
  "backgroundWarningHighlighted": {
    "hex": "#edc113",
    "hexDark": "#fed014",
  },
  "black": {
    "hex": "#000000",
  },
  "borderCritical": {
    "hex": "#bb1f1f",
    "hexDark": "#f16c6c",
  },
  "borderCriticalFaded": {
    "hex": "#f7dcdc",
    "hexDark": "#582929",
  },
  "borderDisabled": {
    "hex": "#dfe2ea",
    "hexDark": "#262a34",
  },
  "borderNeutral": {
    "hex": "#b3bbce",
    "hexDark": "#4c5264",
  },
  "borderNeutralFaded": {
    "hex": "#dddfe7",
    "hexDark": "#2d374c",
  },
  "borderPositive": {
    "hex": "#10853b",
    "hexDark": "#22ac54",
  },
  "borderPositiveFaded": {
    "hex": "#cff3dd",
    "hexDark": "#283b2c",
  },
  "borderPrimary": {
    "hex": "#1c50c1",
    "hexDark": "#758ff9",
  },
  "borderPrimaryFaded": {
    "hex": "#d9e3f9",
    "hexDark": "#2e3555",
  },
  "borderWarning": {
    "hex": "#cfa90f",
    "hexDark": "#b4920a",
  },
  "borderWarningFaded": {
    "hex": "#faedbb",
    "hexDark": "#3d3628",
  },
  "brand": {
    "hex": "#2563eb",
  },
  "foregroundCritical": {
    "hex": "#c62121",
    "hexDark": "#f56868",
  },
  "foregroundDisabled": {
    "hex": "#c6ccda",
    "hexDark": "#434959",
  },
  "foregroundNeutral": {
    "hex": "#14181f",
    "hexDark": "#eff1f5",
  },
  "foregroundNeutralFaded": {
    "hex": "#5b667e",
    "hexDark": "#c0c6d6",
  },
  "foregroundPositive": {
    "hex": "#0d7533",
    "hexDark": "#18ac4f",
  },
  "foregroundPrimary": {
    "hex": "#225cdc",
    "hexDark": "#7590f7",
  },
  "foregroundWarning": {
    "hex": "#7b6305",
    "hexDark": "#b4920c",
  },
  "white": {
    "hex": "#ffffff",
  },
}
`;

exports[`Themes/Utilties/generateColors generate the default theme 1`] = `
{
  "backgroundCritical": {
    "hex": "#e22c2c",
    "hexDark": "#d02626",
  },
  "backgroundCriticalFaded": {
    "hex": "#fdeded",
    "hexDark": "#3e1f1f",
  },
  "backgroundCriticalHighlighted": {
    "hex": "#d02828",
    "hexDark": "#e22a2a",
  },
  "backgroundDisabled": {
    "hex": "#eceef2",
    "hexDark": "#1e212a",
  },
  "backgroundDisabledFaded": {
    "hex": "#f5f6f9",
    "hexDark": "#171921",
  },
  "backgroundElevationBase": {
    "hex": "#ffffff",
    "hexDark": "#15171e",
  },
  "backgroundElevationOverlay": {
    "hex": "#ffffff",
    "hexDark": "#1c1f28",
  },
  "backgroundElevationRaised": {
    "hex": "#ffffff",
    "hexDark": "#191b23",
  },
  "backgroundNeutral": {
    "hex": "#dfe2ea",
    "hexDark": "#494f60",
  },
  "backgroundNeutralFaded": {
    "hex": "#f1f2f6",
    "hexDark": "#222835",
  },
  "backgroundNeutralHighlighted": {
    "hex": "#d2d7e2",
    "hexDark": "#52586b",
  },
  "backgroundPage": {
    "hex": "#ffffff",
    "hexDark": "#0f1116",
  },
  "backgroundPageFaded": {
    "hex": "#f9f9fb",
    "hexDark": "#111319",
  },
  "backgroundPositive": {
    "hex": "#118850",
    "hexDark": "#14784a",
  },
  "backgroundPositiveFaded": {
    "hex": "#edfdf5",
    "hexDark": "#1f2a23",
  },
  "backgroundPositiveHighlighted": {
    "hex": "#0f7d49",
    "hexDark": "#178351",
  },
  "backgroundPrimary": {
    "hex": "#5a58f2",
    "hexDark": "#524fea",
  },
  "backgroundPrimaryFaded": {
    "hex": "#ecebfe",
    "hexDark": "#252544",
  },
  "backgroundPrimaryHighlighted": {
    "hex": "#4d4af0",
    "hexDark": "#5f5ced",
  },
  "backgroundWarning": {
    "hex": "#facc15",
    "hexDark": "#f1c512",
  },
  "backgroundWarningFaded": {
    "hex": "#fffae9",
    "hexDark": "#2c271f",
  },
  "backgroundWarningHighlighted": {
    "hex": "#edc113",
    "hexDark": "#fed014",
  },
  "black": {
    "hex": "#000000",
  },
  "borderCritical": {
    "hex": "#bf2424",
    "hexDark": "#f46969",
  },
  "borderCriticalFaded": {
    "hex": "#fadbdb",
    "hexDark": "#582929",
  },
  "borderDisabled": {
    "hex": "#dfe2ea",
    "hexDark": "#262a34",
  },
  "borderNeutral": {
    "hex": "#b3bbce",
    "hexDark": "#4c5264",
  },
  "borderNeutralFaded": {
    "hex": "#dddfe7",
    "hexDark": "#2d374c",
  },
  "borderPositive": {
    "hex": "#0c6e40",
    "hexDark": "#21ab6b",
  },
  "borderPositiveFaded": {
    "hex": "#d0f3e2",
    "hexDark": "#293b2f",
  },
  "borderPrimary": {
    "hex": "#3b38ed",
    "hexDark": "#8c8bf3",
  },
  "borderPrimaryFaded": {
    "hex": "#dedcfb",
    "hexDark": "#323164",
  },
  "borderWarning": {
    "hex": "#cfa90f",
    "hexDark": "#b4920a",
  },
  "borderWarningFaded": {
    "hex": "#faedbb",
    "hexDark": "#3d3628",
  },
  "brand": {
    "hex": "#5a58f2",
  },
  "foregroundCritical": {
    "hex": "#c42525",
    "hexDark": "#f36a6a",
  },
  "foregroundDisabled": {
    "hex": "#c6ccda",
    "hexDark": "#434959",
  },
  "foregroundNeutral": {
    "hex": "#14181f",
    "hexDark": "#eff1f5",
  },
  "foregroundNeutralFaded": {
    "hex": "#5b667e",
    "hexDark": "#c0c6d6",
  },
  "foregroundPositive": {
    "hex": "#0d7544",
    "hexDark": "#18ab66",
  },
  "foregroundPrimary": {
    "hex": "#4f4cf0",
    "hexDark": "#8b8af7",
  },
  "foregroundWarning": {
    "hex": "#7b6305",
    "hexDark": "#b4920c",
  },
  "white": {
    "hex": "#ffffff",
  },
}
`;
